visually display if the mask for the option is still loading

--- a/style.css
+++ b/style.css
@@ -72,6 +72,10 @@ hr {
     &.active {
         outline: 0.2em solid cyan;
     }
+    &.loading {
+        cursor: wait;
+        background-color: #aaa;
+    }
 }
 
 .popup {
