--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ hr {
     width: fit-content;
     margin: 0 auto;
 }
+.canvas-container {
+    display: flex;
+    justify-content: center;
+}
 .header {
     display: flex;
     justify-content: space-between;
@@ -52,6 +56,7 @@ hr {
 
 
 .option-container {
+    width: 90vw;
     max-width: 600px;
     margin-top: 1em;
     display: flex;
